# nl2py

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  RESTRUCTURING_SUMMARY.md  SECURITY.md  TRANSLATION_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
blocks/: block_1.py  block_3.py
docker/: .env.example  DOCKER_SETUP_SUMMARY.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  start.bat  start.sh  stop.bat  stop.sh
docker/init-scripts/clickhouse/: 01-init.sql
docker/init-scripts/elasticsearch/: init.sh
docker/init-scripts/localstack/: 01-init.sh
docker/init-scripts/mongodb/: 01-init.js
docker/init-scripts/mysql/: 01-init.sql
docker/init-scripts/postgres/: 01-init.sql
docker/init-scripts/timescaledb/: 01-init.sql
docs/: _config.yml  api-reference.md  api.html  architecture.html  docker.html  examples.md  getting-started.html  getting-started.md  index.html  index.md  installation.md  modules.html
docs/assets/css/: mobile-fix.css  style.css
examples/: basic_pipeline.txt  nlp_commands.txt  quick_examples.txt
images/: README.md
nl2pyflow/: __init__.py  __main__.py  cli.py  code_generator.py  llm_handler.py  orchestrator.py
nl2pyflow/backend/: __init__.py  app.py
nl2pyflow/frontend/: __init__.py  index.html
nl2pyflow/frontend/scripts/: App.js
nl2pyflow/frontend/scripts/components/: Block.js  CodeModal.js  FlowChart.js  TextEditor.js
nl2pyflow/frontend/styles/: components.css  main.css
src/nl2py/: __init__.py  nlp_interpreter.py
src/nl2py/gui/: __init__.py  nlp_gui.py
src/nl2py/modules/: __init__.py  aws_module.py  azure_module.py  cassandra_module.py  clickhouse_module.py  compression_module.py  discord_module.py  docker_module.py  elasticsearch_module.py  email_module.py  gcp_module.py  jwt_module.py  kafka_module.py  keycloak_module.py  kubernetes_module.py  ldap_module.py  module_base.py  mongodb_module.py  mqtt_module.py  mysql_module.py  neo4j_module.py  opensearch_module.py  postgres_module.py  prometheus_module.py  rabbitmq_module.py  redis_module.py  restapi_module.py  s3_module.py  scylladb_module.py  selenium_module.py  slack_module.py  ssh_module.py  teams_module.py  telegram_module.py  terraform_module.py  timescaledb_module.py  vault_module.py
